<resources>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="LoginNavHost">LoginNavHost</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_messages">Messages</string>
    <string name="title_subjects">Subjects</string>
    <string name="title_students">Students</string>
    <string name="title_planner">Planner</string>

    <string name="text_error">Error</string>
    <string name="text_success">Success</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="text_yes">yes</string>
    <string name="text_info">Info</string>
    <string name="setup_lock_screen">
        Secure lock screen hasn\'t set been up.\n
        Go to \'Settings -> Security -> Fingerprint\' to set up a fingerprint or face
    </string>

    <string name="prompt_info_title">Tata Classedge Biometric</string>
    <string name="prompt_info_subtitle">Please login to get access</string>
    <string name="prompt_info_description">ECE App use Android biometric authentication</string>


    <string name="btn_skip_for_now"><u>Skip for now</u></string>

    <string name="app_type_teacher">teacher</string>
    <string name="app_type_parent">parent</string>

    <string name="having_any_issues_drop_an_email_to_n_support_schoolname_com">Having any issues? Drop an email to \n support@schoolname.com</string>
    <string name="support_mail">support@schoolname.com</string>

    <string name="title_settings">Settings</string>
    <string name="title_update_profile">Update Profile</string>
    <string name="lbl_use_touch_id">Use Touch ID</string>
    <string name="lbl_use_face_id">Use Face ID</string>
    <string name="lbl_you_can_use_touch_id_to_login">You can use Touch ID to login</string>
    <string name="lbl_you_can_use_face_id_to_login">You can use Face ID to login</string>

    <string name="lbl_forget_password">Forget Password</string>
    <string name="update_profile">Update Profile</string>
    <string name="update_password">Update Password</string>
    <string name="i_accept_the_term_amp_conditions"><![CDATA[I accept the Terms & Conditions]]></string>
    <string name="term_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="lbl_comming_soon">Under Development, Coming soon.</string>

    <string name="lbl_good_morning">Good Morning!</string>
    <string name="lbl_good_afternoon">Good Afternoon!</string>
    <string name="lbl_good_evening">Good Evening!</string>
    <string name="lbl_good_night">Good Night!</string>
    <string name="lbl_resend_otp">Resend OTP</string>
    <string name="digits_allowed_mobile_number">0123456789</string>

    <array name="school_name">
        <item>St. Francis</item>
        <item>Poddar</item>
        <item>St. George</item>
        <item>Queens</item>
        <item>St. Lawrence</item>
        <item>Ryan International</item>
        <item>Witty International</item>
    </array>



    <string name="media_url_mp3">https://storage.googleapis.com/exoplayer-test-media-0/Jazz_In_Paris.mp3</string>
    <string name="media_url_mp4">https://storage.googleapis.com/exoplayer-test-media-0/BigBuckBunny_320x180.mp4</string>
    <string name="lbl_resources_found"><![CDATA[ shared resources found in ]]></string>


</resources>
