<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/nav_messages"
        android:icon="@drawable/ic_messages"
        android:title="@string/title_messages" />

    <item
        android:id="@+id/nav_subjects"
        android:icon="@drawable/ic_subjects"
        android:title="@string/title_subjects" />

    <item
        android:id="@+id/nav_students"
        android:icon="@drawable/ic_students"
        android:title="@string/title_students" />

    <item
        android:id="@+id/nav_planner"
        android:icon="@drawable/ic_calendar"
        android:title="@string/title_planner" />
</menu>